# DijkstraSteiner

./: CMakeLists.txt
instances/: i02.sdtg  i03.sdtg  i05.sdtg  i06.sdtg  solutions.txt
instances/custom/: i_17.sdtg  i_18.sdtg  i_19.sdtg  i_20.sdtg
src/: DijkstraSteiner.h  GridPoint.h  HananGrid.cpp  HananGrid.h  LabelMap.h  PrimSteinerHeuristic.cpp  PrimSteinerHeuristic.h  SubsetIndexer.h  TypeDefs.h  main.cpp
src/future_costs/: BBFutureCost.cpp  BBFutureCost.h  FutureCost.h  MSTFutureCost.cpp  MSTFutureCost.h  MaxFutureCost.h  NullFutureCost.h  OneTreeFutureCost.cpp  OneTreeFutureCost.h
